Add Bloggr Client app, update server: PUT /posts/:id

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>App</title>
+  <title>Bloggr Client</title>
+
+  <link rel="stylesheet" href="normalize.css" >
+  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css">
+
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.1.0/moment.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
+</head>
+<body>
+  <script type="text/javascript" charset="utf-8">
+    window.showdown = new Showdown.converter();
+  </script>
   <script src="vendor.js"></script>
   <script src="templates.js"></script>
   <script src="app.js"></script>
-  <link href="app.css" rel="stylesheet">
-</head>
-<body>
 </body>
 </html>
