update client dependencies, build, install

--- a/client/app/assets/index.html
+++ b/client/app/assets/index.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Bloggr Client</title>
+  <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="normalize.css" >
   <link rel="stylesheet" href="app.css">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css">
-
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.1.0/moment.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
 </head>
 <body>
   <script type="text/javascript" charset="utf-8">
