--- a/client/app/assets/index.html
+++ b/client/app/assets/index.html
@@ -11,10 +11,9 @@
 </head>
 <body>
   <script src="vendor.js"></script>
+  <script src="app.js"></script>
   <script type="text/javascript" charset="utf-8">
     window.showdown = new Showdown.converter();
-  </script>
-  <script src="templates.js"></script>
-  <script src="app.js"></script>
-</body>
+    require('init');
+  </script></body>
 </html>
