--- a/client/app/assets/index.html
+++ b/client/app/assets/index.html
@@ -11,7 +11,7 @@
   <script src="vendor.js"></script>
   <script src="app.js"></script>
 </head>
-<body class="Blog">
+<body class="Blog u-serif">
   <script type="text/javascript" charset="utf-8">
     window.showdown = new Showdown.converter();
     require('init');
