Fix vert height

--- a/client/app/assets/index.html
+++ b/client/app/assets/index.html
@@ -5,13 +5,13 @@
   <title>Bloggr Client</title>
   <meta name="viewport" content="width=device-width">
 
-  <link rel="stylesheet" href="normalize.css" >
+  <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="app.css">
 
   <script src="vendor.js"></script>
   <script src="app.js"></script>
 </head>
-<body class="Blog u-serif">
+<body>
   <script type="text/javascript" charset="utf-8">
     window.showdown = new Showdown.converter();
     require('init');
