Add admin section

--- a/client/app/assets/index.html
+++ b/client/app/assets/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bloggr Client</title>
+  <title>Pixelhandler.com</title>
   <meta name="viewport" content="width=device-width">
+  <meta name="author" content="Bill Heaton">
 
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="app.css">
