--- a/client/app/assets/index.html
+++ b/client/app/assets/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width">
   <meta name="author" content="Bill Heaton">
 
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="/normalize.css">
+  <link rel="stylesheet" href="/app.css">
 
-  <script src="vendor.js"></script>
-  <script src="app.js"></script>
+  <script src="/vendor.js"></script>
+  <script src="/app.js"></script>
 </head>
 <body>
   <script type="text/javascript" charset="utf-8">
