--- a/client/tests/coverage.html
+++ b/client/tests/coverage.html
@@ -1,15 +1,24 @@
 <!doctype html>
 <html>
 <head>
+  <title>Test Coverage</title>
   <script src="../bower_components/qunit/qunit/qunit.js"></script>
   <script src="../bower_components/blanket/dist/qunit/blanket.js"></script>
-  <script src="../bower_components/jquery/jquery.js"></script>
-  <script src="../bower_components/handlebars/handlebars.js"></script>
-  <script src="../bower_components/ember/ember.js"></script>
-  <script src="../bower_components/ember-data/ember-data.js"></script>
 
-  <!-- TODO packages here -->
-  <!-- TODO tests Here -->
+  <script src="../public/vendor.js"></script>
+  <script src="../public/app.js" data-cover></script>
+
+  <script src="./support/test-helpers.js"></script>
+  <script src="../seeds/posts.js"></script>
+  <script src="./integration/about_test.js"></script>
+  <script src="./integration/admin/create_delete_test.js"></script>
+  <script src="./integration/admin/edit_test.js"></script>
+  <script src="./integration/admin/index_test.js"></script>
+  <script src="./integration/admin_test.js"></script>
+  <script src="./integration/application_test.js"></script>
+  <script src="./integration/index_test.js"></script>
+  <script src="./integration/post_test.js"></script>
+  <script src="./integration/posts_index_test.js"></script>
 
   <script type="text/javascript" charset="utf-8">
     $(document)
