--- a/client/app/assets/index.html
+++ b/client/app/assets/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Pixelhandler.com</title>
-  <meta name="viewport" content="width=device-width">
+  <meta name="MobileOptimized" content="320">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
+  <meta http-equiv="cleartype" content="on">
   <meta name="author" content="Bill Heaton">
 
   <link rel="stylesheet" href="/normalize.css">
