--- a/client/app/assets/index.html
+++ b/client/app/assets/index.html
@@ -10,6 +10,7 @@
 
   <link rel="stylesheet" href="/normalize.css">
   <link rel="stylesheet" href="/app.css">
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic|Source+Code+Pro:500' rel='stylesheet' type='text/css'>
 
   <script src="/vendor.js"></script>
   <script src="/app.js"></script>
