--- a/client/app/assets/index.html
+++ b/client/app/assets/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pixelhandler.com</title>
+  <title>Pixelhandler's Blog</title>
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=0">
   <meta http-equiv="cleartype" content="on">
@@ -11,7 +11,10 @@
   <link rel="stylesheet" href="/normalize.css">
   <link rel="stylesheet" href="/app.css">
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic|Source+Code+Pro:500' rel='stylesheet' type='text/css'>
-
+  <script src="/env.js"></script>
+  <script type="text/javascript">
+    require('env');
+  </script>
   <script src="/vendor.js"></script>
   <script src="/app.js"></script>
 </head>
